<resources>
    <string name="app_name">Fridge Finder</string>
    <string name="saved_recipes">Saved Recipes</string>
    <string name="app_title">Fridge Finder</string>
    <string name="back">Back</string>
    <string name="all_filters">All Filters</string>
    <string name="menu">Menu</string>
    <string name="search_saved_recipes">Search Saved Recipes</string>
    <string name="scan_your_fridge">Scan your Fridge</string>
    <string name="num_photos_left">%1$d/%2$d left</string>
    <string name="done_scanning">Done Scanning</string>
    <string name="analyze_photos">Analyze Photos</string>
    <string name="review_photos">Review Photos</string>
    <string name="take_more_photos">Take More Photos</string>
    <string name="remove_image">Remove image</string>
    <string name="upload_photo">Upload Photos</string>
    <string name="delete_ingredient">Delete ingredient</string>
</resources>