<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScanCameraActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/cameraPreview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </androidx.camera.view.PreviewView>
    <TextView
        android:id="@+id/numPhotosLeft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shadowColor="#666"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:text="@string/num_photos_left"
        android:textColor="#ddd"
        android:textSize="22sp" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="#80000000"
        android:paddingHorizontal="36dp"
        android:paddingVertical="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/uploadButton"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/upload_photo"
            android:src="@drawable/upload" />


        <ImageButton
            android:id="@+id/cameraButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_centerInParent="true"
            android:background="@drawable/circular_button_background"
            android:contentDescription="@string/scan_your_fridge"
            android:padding="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_camera" />

        <ImageButton
            android:id="@+id/doneButton"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/back_circle"
            android:contentDescription="@string/done_scanning"
            android:src="@drawable/done_icon" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>