<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textColor="@android:color/black"
            android:textSize="48sp"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat_bold"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="80dp" />

        <Button
            android:id="@+id/savedRecipesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleTextView"
            android:layout_marginTop="80dp"
            android:backgroundTint="#D3D3D3"
            android:text="@string/saved_recipes"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@android:color/black"
            android:layout_centerHorizontal="true"/>

        <ImageButton
            android:id="@+id/cameraButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="120dp"
            android:background="@drawable/circular_button_background"
            android:contentDescription="@string/scan_your_fridge"
            android:padding="12dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_camera" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>