<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SavedRecipesActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/recipe_background"
            android:padding="10dp">

            <!-- Back Button -->
            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="5dp"
                android:background="@drawable/back_circle"
                android:contentDescription="@string/back"
                android:src="@drawable/back_arrow" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#CDCEFF"
            android:gravity="start"
            android:orientation="horizontal"
            android:padding="8dp">

            <!-- Search Button -->
            <ImageButton
                android:id="@+id/searchSavedRecipesButton"
                android:layout_width="62dp"
                android:layout_height="50dp"
                android:scaleX="1.2"
                android:scaleY="1.2"
                android:background="@android:color/transparent"
                android:contentDescription="@string/search_saved_recipes"
                android:src="@drawable/search_icon" />

            <!-- All Filters Button -->
            <Button
                android:id="@+id/allFiltersButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="#5D467A"
                android:text="@string/all_filters"
                android:textColor="#FFFFFF" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>